<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.utng.colvera.calculadorag.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_calculadora"
        android:textSize="17dp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opciones"
        android:id="@+id/cmb_opciones"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_numero1"
        android:textSize="27dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_numero1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_numero2"
        android:textSize="27dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_numero2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_sumar"
            android:id="@+id/btn_sumar"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_restar"
            android:id="@+id/btn_restar"/>

        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_multiplicar"
            android:id="@+id/btn_multiplicar"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_dividir"
            android:id="@+id/btn_dividir"/>

        ></LinearLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:text="@string/texto_factorial"
        android:id="@+id/btn_factorial"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_resultado"
        android:textSize="25dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_resultado"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_limpiar"
        android:id="@+id/btn_limpiar"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_creditos"
        android:id="@+id/btn_creditos"
        />



</LinearLayout>
